@@ -1,3 +1,7 @@
+2007-10-23  Robert Ancell  <robert.ancell@gmail.com>
+
+	* glchess.in: Display error dialog and quit if unable to import glchess.glchess (Bug #412690)
+
 2007-10-22  Robert Ancell  <robert.ancell@gmail.com>
 
 	* lib/glchess.py: Catch and ignore all exceptions writing to stdout (Bug #426461)
